# cascade

./: .gitignore  LICENSE  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 26694fd0d572_initial_schema.py
cascade/: __init__.py  config.py  database.py  main.py  utils.py
cascade/engine/: __init__.py  loop.py  pinger.py  poller.py  progress_tracker.py
cascade/integrations/: __init__.py  hermes_bridge.py  monitor_daemon.py
cascade/mcp/: __init__.py  instructions.py  server.py  tools.py
cascade/models/: __init__.py  dependency.py  event.py  goal.py  message.py  milestone.py  project.py  task.py  telemetry.py
cascade/routers/: __init__.py  dashboard.py  events.py  goals.py  milestones.py  pages.py  projects.py  tasks.py
cascade/schemas/: __init__.py  event.py  goal.py  message.py  milestone.py  project.py  task.py
cascade/services/: __init__.py  auto_decision.py  event_service.py  goal_service.py  milestone_service.py  monitor_service.py  project_service.py  scheduler_service.py  task_service.py
cascade/web/static/: app.js
cascade/web/templates/: base.html  board.html  dashboard.html  project.html  task.html
cascade/web/templates/partials/: goal_card.html  progress_bar.html  project_aggregate.html  task_card.html  task_list.html
tests/: conftest.py  test_api.py  test_event_service.py  test_goal_service.py  test_mcp_server.py  test_milestone_service.py  test_monitor_service.py  test_project_service.py  test_scheduler_service.py  test_task_service.py
